--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,31 @@
-.App {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-}
-
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+}
+
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  background: #fafafa;
 }
 
-
-a,
-a:hover,
-a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
+.App {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
 }
+
